kubernetes/apps/metrics/grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
spec:
  replicas: 1
  selector:
  template:
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:9.1.5
          ports:
            - containerPort: 3000
              protocol: TCP
              name: http
          volumeMounts:
            - name: config
              mountPath: /etc/grafana/provisioning
      volumes:
        - name: config
          configMap:
            name: grafana-config
