kubernetes/apps/metrics/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  internalTrafficPolicy: Local
  ports:
    - name: http
      port: 3000
